fix. ikke hent eldre avtaler for min-side-arbeidsgiver (#1411)
* For en del bedrifter tar det alt for lang tid å hente
avtalene som vises på min-side-arbeidsigver.
En av grunnene er at vi ikke har hatt noe begrensning
på henting av eldre avtaler. Derfor er det lurt å ha
samme begrensning som vi har for oversikten.